erDiagram
  HERO {
    int id PK
    varchar name "UNIQUE"
    varchar localized_name
    varchar primary_attr "ENUM(str,agi,int,all)"
    varchar attack_type "ENUM(Melee,Ranged)"
    text[] roles "multivalued"
    timestamptz created_at
    timestamptz updated_at
  }

  TEAM {
    bigint team_id PK
    int rating
    int wins
    int losses
    bigint last_match_time
    varchar name
    varchar tag
    text logo_url
    timestamptz created_at
    timestamptz updated_at
  }

  PLAYER {
    bigint account_id PK
    varchar steam_id
    text avatar
    text avatarmedium
    text avatarfull
    text profileurl
    varchar personname
    timestamptz last_login
    timestamptz full_history_time
    int cheese
    boolean fh_unavailable
    varchar loccountrycode
    timestamptz last_match_time
    boolean plus
    int leaderboard_rank
    int rank_tier
    timestamptz created_at
    timestamptz updated_at
  }

  NOTABLE_PLAYER {
    bigint account_id PK, FK
    varchar country_code
    int fantasy_role
    bigint team_id FK
    varchar name
    boolean is_locked
    boolean is_pro
    timestamptz created_at
    timestamptz updated_at
  }

  API_RATE_LIMIT {
    serial id PK
    varchar endpoint
    int requests_count
    timestamptz window_start
    int daily_requests
    date daily_window_start
    timestamptz updated_at
  }

  MATCHES {
    bigint match_id PK
    int start_time
    int duration
    int pre_game_duration
    boolean radiant_win
    bigint league_id
    bigint series_id
    int series_type
    int cluster
    int lobby_type
    int game_mode
    int engine
    int radiant_score
    int dire_score
    int tower_status_radiant
    int tower_status_dire
    int barracks_status_radiant
    int barracks_status_dire
    int first_blood_time
    bigint radiant_team_id
    text radiant_name
    bigint dire_team_id
    text dire_name
    bigint radiant_captain
    bigint dire_captain
    int patch
    int region
    text replay_url
    timestamptz created_at
    timestamptz updated_at
  }

  TEAM_MATCH {
    bigint team_id PK, FK
    bigint match_id PK, FK
    boolean radiant
  }

  PICKS_BANS {
    bigint match_id PK, FK
    smallint ord PK
    boolean is_pick
    int hero_id
    smallint team "0=radiant,1=dire"
    smallint player_slot
  }

  DRAFT_TIMINGS {
    bigint match_id PK, FK
    smallint ord PK
    boolean is_pick
    smallint active_team
    int hero_id
    smallint player_slot
    int extra_time
    int total_time_taken
  }

  PLAYER_MATCHES {
    bigint match_id PK, FK
    bigint account_id PK
    int player_slot
    int hero_id
    boolean is_radiant "derived from player_slot < 128"
    boolean win
    int kills
    int deaths
    int assists
    int level
    int net_worth
    int gold_per_min
    int xp_per_min
    int lane
    int lane_role
    boolean is_roaming
  }

  ITEM_PURCHASE_EVENT {
    bigint match_id PK, FK
    bigint account_id PK, FK
    int hero_id
    int time_s PK
    text item_key PK
    boolean is_radiant
    int patch
  }

  HERO_RANKING {
    bigint account_id PK
    int hero_id PK, FK
    double score
    timestamptz created_at
    timestamptz updated_at
  }

  PATCH_CONSTANTS {
    int id PK
    text name
    timestamptz start_time
  }

  PRO_HERO_TRENDS {
    text bucket_type PK
    text bucket_value PK
    int hero_id PK
    bigint matches
    bigint picks
    double pick_rate
    double win_rate
    double delta_vs_prev
    timestamptz computed_at
  }

  PRO_HERO_PAIR_STATS {
    text bucket_type PK
    text bucket_value PK
    int hero_id_a PK
    int hero_id_b PK
    bigint games_together
    bigint wins_together
    double support
    double confidence
    double lift
    timestamptz computed_at
  }

  PLAYER ||--o| NOTABLE_PLAYER : "1 to 0..1 (subtype via PK=FK)"
  TEAM ||--o{ NOTABLE_PLAYER : "1 to many"

  TEAM ||--o{ TEAM_MATCH : "1 to many"
  MATCHES ||--o{ TEAM_MATCH : "1 to many"

  MATCHES ||--o{ PICKS_BANS : "1 to many"
  HERO ||--o{ PICKS_BANS : "1 to many"

  MATCHES ||--o{ DRAFT_TIMINGS : "1 to many"
  HERO ||--o{ DRAFT_TIMINGS : "1 to many"

  MATCHES ||--o{ PLAYER_MATCHES : "1 to many"
  PLAYER ||--o{ PLAYER_MATCHES : "conceptual FK on account_id"
  HERO ||--o{ PLAYER_MATCHES : "1 to many"

  PLAYER_MATCHES ||--o{ ITEM_PURCHASE_EVENT : "1 to many (composite FK)"

  PLAYER ||--o{ HERO_RANKING : "1 to many"
  HERO ||--o{ HERO_RANKING : "1 to many"

  PATCH_CONSTANTS ||--o{ MATCHES : "1 to many via MATCHES.patch"

  HERO ||--o{ PRO_HERO_TRENDS : "1 to many"
  HERO ||--o{ PRO_HERO_PAIR_STATS : "1 to many (two roles)"

  API_RATE_LIMIT {
  }
